duckdb/test/corpus/returning.txt
================================================================================
INSERT RETURNING
================================================================================

INSERT INTO t VALUES (1, 'a') RETURNING *;
INSERT INTO t SELECT * FROM src RETURNING id;

--------------------------------------------------------------------------------

(program
  (statement
    (insert
      (keyword_insert)
      (keyword_into)
      (object_reference
        (identifier))
      (keyword_values)
      (list
        (literal)
        (literal)))
    (returning
      (keyword_returning)
      (select_expression
        (term
          (all_fields)))))
  (statement
    (insert
      (keyword_insert)
      (keyword_into)
      (object_reference
        (identifier))
      (select
        (keyword_select)
        (select_expression
          (term
            (all_fields))))
      (from
        (keyword_from)
        (relation
          (object_reference
            (identifier)))))
    (returning
      (keyword_returning)
      (select_expression
        (term
          (field
            (identifier)))))))

================================================================================
UPDATE RETURNING
================================================================================

UPDATE t SET col = 42 WHERE id = 1 RETURNING *;

--------------------------------------------------------------------------------

(program
  (statement
    (update
      (keyword_update)
      (relation
        (object_reference
          (identifier)))
      (keyword_set)
      (assignment
        (field
          (identifier))
        (literal))
      (where
        (keyword_where)
        (binary_expression
          (field
            (identifier))
          (literal))))
    (returning
      (keyword_returning)
      (select_expression
        (term
          (all_fields))))))

================================================================================
DELETE RETURNING
================================================================================

DELETE FROM t WHERE id = 1 RETURNING id, name;

--------------------------------------------------------------------------------

(program
  (statement
    (delete
      (keyword_delete))
    (from
      (keyword_from)
      (object_reference
        (identifier))
      (where
        (keyword_where)
        (binary_expression
          (field
            (identifier))
          (literal))))
    (returning
      (keyword_returning)
      (select_expression
        (term
          (field
            (identifier)))
        (term
          (field
            (identifier)))))))
